@startuml

title __HELPEROBJECTS's Class Diagram__\n

  package model {
    package model.helperObjects {
      class Critic {
          - rating : double
          - id : int
          - views : int
          + Critic()
          + compareTo()
          + equals()
          + hashCode()
          + getRating()
          + getId()
          + getViews()
          + toString()
      }
    }
  }
  

  package model {
    package model.helperObjects {
      class MockFileInfoLoader {
          + loadRatingInfo()
      }
    }
  }
  

  package model {
    package model.helperObjects {
      class RatedMovie {
          - rating : double
          - views : int
          - id : int
          + RatedMovie()
          + toString()
          + equals()
          + hashCode()
          + getRating()
          + getId()
          + compareTo()
          + getViews()
      }
    }
  }
  

  package model {
    package model.helperObjects {
      class ViewedMovie {
          - movieID : int
          - count : int
          + ViewedMovie()
          + equals()
          + hashCode()
          + compareTo()
          + toString()
          + getMovieID()
          + getCount()
      }
    }
  }
  

  Critic -up-|> Comparable
  MockFileInfoLoader -up-|> InfoLoader
  RatedMovie -up-|> Comparable
  ViewedMovie -up-|> Comparable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
